# cmake-python-binding

./: Dockerfile  README.md  fabfile.py
demo/: CMakeLists.txt
demo/inc/: CMakeLists.txt  demo.hpp
demo/pysrc/: CMakeLists.txt  setup.py  swig.i
demo/pysrc/demo/: __init__.py
demo/src/: CMakeLists.txt  main.cpp
